crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__local_type_declarations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    class Local {
      int value;

      void touch() {
      }
    }

    interface Worker {
      void work();
    }
    execute();
  }
}

diagnostics:
(none)
