crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__remove_empty_block_statements.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    int value = 1;
    // keep marker
    /* keep trailing marker */
    value++;
  }
}

diagnostics:
(none)
