crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__simple_method_block.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    final var local = prepare();
    @Decl
    final @Type String value = current();
    int first = 1, second = 2;
    execute();
    return;
  }
}

diagnostics:
(none)
