crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__switch_opening_brace_comment.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SwitchOpeningBraceComment {
  void arrow(int value) {
    switch (value) { // JOLT-TRIVIA:arrow-open
      default -> done();
    }
  }

  void colon(int value) {
    switch (value) { // JOLT-TRIVIA:colon-open
      default:
        done();
    }
  }

  void done() {
  }
}

diagnostics:
(none)
