crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__switch_rule_arrow_break.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SwitchRuleArrowBreak {
  String label(int value) {
    return switch (value) {
      case 1 -> "short";
      case 2 -> {
        yield "block";
      }
      case String s when s.isBlank() ->
        "loooooooooooooooooooooooooooooooooooooooooooooooooooooooooong guarded expression";
      case Pair(int left, _) ->
        "looooooooooooooooooooooooooooooooooooooooooooooooooooooong pattern expression";
      default ->
        "looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong expression";
    };
  }

  java.util.function.Function<Integer, Integer> fn(Object value) {
    return switch (value) {
      case Boolean enabled when enabled -> x -> x + 1;
      default -> x -> x;
    };
  }
}

diagnostics:
(none)
