crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__while_empty_body.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    while (ready) {
    }
  }
}

diagnostics:
(none)
